RealTime Conventional Ultrasound, Basic setting, one device

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ find_package(CUDAToolkit REQUIRED)
 find_package(Vulkan REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(PkgConfig REQUIRED)
+find_package(spdlog CONFIG REQUIRED)
 find_package(VTK REQUIRED COMPONENTS 
   RenderingVolumeOpenGL2 
   RenderingVolume 
@@ -91,7 +92,7 @@ target_link_libraries(RopView PRIVATE glm::glm)
 target_link_libraries(RopView PRIVATE PkgConfig::libusb)
 target_link_libraries(RopView PRIVATE ${VTK_LIBRARIES})
 target_link_libraries(RopView PRIVATE CUDA::cudart)
-
+target_link_libraries(RopView PRIVATE spdlog::spdlog)
 #target_link_libraries(RopView CUDA::cudart)
 
 set(QT_PLUGIN_PATH "C:/vcpkg/vcpkg/installed/x64-windows/Qt6/plugins/platforms")
